istio-api-gateway/istio-gateway/5-self-signed-cert/4-kong-api-gateway-retail-banking.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: retail-banking-kong-api-gateway
  namespace: retail-banking-kic
spec:
  gatewayClassName: retail-banking-kong-gatewayclass
  listeners:
  - protocol: HTTPS
    port: 443
    name: https
    hostname: retail-banking.ky-cloud.click
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: retail-banking-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: retail-banking-ns
