istio-api-gateway/istio-gateway/5-self-signed-cert/5-kong-api-gateway-payments.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: payments-kong-api-gateway
  namespace: payments-kic
spec:
  gatewayClassName: payments-kong-gatewayclass
  listeners:
  - protocol: HTTPS
    port: 443
    name: https
    hostname: payments.ky-cloud.click
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: payments-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: payments-ns
